# cpd-datasets

./: LICENSE.md  README.md  pyproject.toml
conf/: default.yml
cpd-dataset/: dataset_description.py
cpd_dataset/: __init__.py  __main__.py  config_parser.py  dataset_description.py  distributions.py  generator.py  main.py  saver.py
