[tool.poetry]
name = "cpd_datasets"
version = "0.1.0"
description = "Datasets generator for Change Point Detection problem"
authors = ["Vladimir Kutuev <vladimir.kutuev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2"
numpy = "^1.26"
scipy = "^1.13"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
